fix: actualize documentation
