# app/docs/swagger.json
@@ -83,7 +83,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CategoryDeleteBody"
+                            "$ref": "#/definitions/requestData.CategoryDelete"
                         }
                     }
                 ],
@@ -235,7 +235,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CategoryUpdateBody"
+                            "$ref": "#/definitions/requestData.CategoryUpdate"
                         }
                     }
                 ],
@@ -289,7 +289,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.ChangeUser"
+                            "$ref": "#/definitions/requestData.ChangeUser"
                         }
                     }
                 ],
@@ -522,6 +522,52 @@
                 }
             }
         },
+        "/auth/login": {
+            "post": {
+                "description": "Endpoint to login into account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Login into account",
+                "parameters": [
+                    {
+                        "description": "request requestData",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requestData.Login"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.AuthResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/logout": {
             "post": {
                 "description": "Endpoint to logout from account",
@@ -580,7 +626,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.SendMail"
+                            "$ref": "#/definitions/requestData.SendMail"
                         }
                     }
                 ],
@@ -690,7 +736,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.RecoverySubmit"
+                            "$ref": "#/definitions/requestData.RecoverySubmit"
                         }
                     }
                 ],
@@ -843,7 +889,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.RegistrationCodeBody"
+                            "$ref": "#/definitions/requestData.RegistrationCode"
                         }
                     }
                 ],
@@ -851,7 +897,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.CodeCheckResponse"
+                            "$ref": "#/definitions/responses.CodeCheck"
                         }
                     },
                     "400": {
@@ -1067,7 +1113,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.EmailChangeComplete"
+                            "$ref": "#/definitions/requestData.ChangeEmailComplete"
                         }
                     }
                 ],
@@ -1075,7 +1121,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.EmailChangeResponse"
+                            "$ref": "#/definitions/responses.ChangeEmail"
                         }
                     },
                     "400": {
@@ -1247,102 +1293,6 @@
         }
     },
     "definitions": {
-        "models.CategoryDeleteBody": {
-            "type": "object",
-            "properties": {
-                "category_id": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
-        "models.CategoryUpdateBody": {
-            "type": "object",
-            "properties": {
-                "category_id": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "image": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.ChangeUser": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "login": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "phone": {
-                    "type": "string"
-                },
-                "role": {
-                    "type": "integer"
-                },
-                "surname": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.CodeCheckResponse": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "surname": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.EmailChangeComplete": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.EmailChangeResponse": {
-            "type": "object",
-            "properties": {
-                "access_token": {
-                    "type": "string"
-                },
-                "messages": {
-                    "type": "string"
-                },
-                "refresh_token": {
-                    "type": "string"
-                },
-                "success": {
-                    "type": "boolean"
-                }
-            }
-        },
         "models.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -1354,33 +1304,6 @@
                 },
                 "success": {
                     "type": "boolean"
-                }
-            }
-        },
-        "models.RecoverySubmit": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.RegistrationCodeBody": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.SendMail": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
                 }
             }
         },
@@ -1447,11 +1370,47 @@
                 }
             }
         },
+        "requestData.CategoryDelete": {
+            "type": "object",
+            "properties": {
+                "category_id": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "requestData.CategoryUpdate": {
+            "type": "object",
+            "properties": {
+                "category_id": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "requestData.ChangeEmail": {
             "type": "object",
             "properties": {
                 "email": {
                     "type": "string"
+                }
+            }
+        },
+        "requestData.ChangeEmailComplete": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
                 }
             }
         },
@@ -1462,6 +1421,32 @@
                     "type": "string"
                 },
                 "old_password": {
+                    "type": "string"
+                }
+            }
+        },
+        "requestData.ChangeUser": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "login": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "integer"
+                },
+                "surname": {
                     "type": "string"
                 }
             }
@@ -1505,6 +1490,28 @@
                 }
             }
         },
+        "requestData.Login": {
+            "type": "object",
+            "properties": {
+                "login": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "requestData.RecoverySubmit": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "requestData.Refresh": {
             "type": "object",
             "properties": {
@@ -1530,7 +1537,23 @@
                 }
             }
         },
+        "requestData.RegistrationCode": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                }
+            }
+        },
         "requestData.Send": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
+        "requestData.SendMail": {
             "type": "object",
             "properties": {
                 "email": {
@@ -1546,6 +1569,23 @@
                     "items": {
                         "type": "integer"
                     }
+                }
+            }
+        },
+        "responses.AuthResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "alive": {
+                    "type": "integer"
+                },
+                "refresh_token": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/responses.UserInfo"
                 }
             }
         },
@@ -1575,7 +1615,41 @@
                 }
             }
         },
+        "responses.ChangeEmail": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "messages": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
         "responses.CheckRecoveryCode": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "surname": {
+                    "type": "string"
+                }
+            }
+        },
+        "responses.CodeCheck": {
             "type": "object",
             "properties": {
                 "email": {
